--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         android:theme="@style/Theme.OSS_AppDatVeXemPhim"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.thanhToan_MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".Activity.chonChoNgoi_MainActivity"
             android:exported="true">
 
