--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:theme="@style/Theme.OSS_AppDatVeXemPhim"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.chiTietVe_MainActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
             android:name=".Activity.thanhToan_MainActivity"
             android:exported="true">
 
