Quản lý tài khoản

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OSS_AppDatVeXemPhim"
         tools:targetApi="31">
+
+
         <activity
-            android:name=".Activity.dsVe_MainActivity"
+            android:name=".Activity.capNhatTaiKhoan_MainActivity"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".Activity.dsTaiKhoan_MainActivity"
+            android:exported="true">
 
+        </activity>
         <activity
             android:name=".Activity.capNhapPhim_MainActivity"
             android:exported="true">
