--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
         android:theme="@style/Theme.OSS_AppDatVeXemPhim"
         tools:targetApi="31">
 
+        <activity
+            android:name=".Activity.dsVe_MainActivity"
+            android:exported="true">
 
+        </activity>
         <activity
             android:name=".Activity.capNhatTaiKhoan_MainActivity"
             android:exported="true">
